update comment for consistency

--- a/_scss/base/_helper-classes.scss
+++ b/_scss/base/_helper-classes.scss
@@ -8,9 +8,9 @@
 // base/custom-mixins/custom-transition,
 // base/mixins/opacity
 // ----------------------------------------------------------------------
-// @import 'base/variables';
-// @import 'base/custom-mixins/custom-transition';
-// @import 'base/mixins/opacity';
+// @use 'base/variables';
+// @use 'base/custom-mixins/custom-transition';
+// @use 'base/mixins/opacity';
 
 
 //primary colors
