adjust all nested @include rules to follow the root styles, per new CSS nested rule guidelines

--- a/_scss/base/_defaults.scss
+++ b/_scss/base/_defaults.scss
@@ -103,7 +103,9 @@ h3,
 h4,
 h5 {
   @include custom-transition.custom-transition(font-size .25s ease);
-  text-align: center;
+  & {
+    text-align: center;
+  }
 }
 
 @include breakpoints.breakpoints(lg_tablet sm_desktop desktop large really_big) {
