--- a/_scss/elements/_page-banner.scss
+++ b/_scss/elements/_page-banner.scss
@@ -150,11 +150,11 @@
   }
 
   .overlay-effect {
-    @include custom-linear-gradient.custom-linear-gradient(to right, rgba(0, 0, 0, 0) 0px, rgba(35, 31, 32, 0.5) 0px, rgba(35, 31, 32, 0.8) 50%, rgba(35, 31, 32, 0.5));
     height: 100%;
     position: absolute;
     width: 100%;
     z-index: 2;
+    @include custom-linear-gradient.custom-linear-gradient(to right, rgba(0, 0, 0, 0) 0px, rgba(35, 31, 32, 0.5) 0px, rgba(35, 31, 32, 0.8) 50%, rgba(35, 31, 32, 0.5));
 
     &::after {
       background-image: url(variables.$e2path + "/images/rv7/banners/halftone_768.png");
@@ -162,9 +162,9 @@
       background-size: cover;
       content: "";
       height: 100%;
-      @include opacity.opacity(0.25);
       position: absolute;
       width: 100%;
+      @include opacity.opacity(0.25);
 
       @include breakpoints.breakpoints(lg_tablet sm_desktop desktop) {
         background-image: url(variables.$e2path + "/images/rv7/banners/halftone_1200.png");
@@ -225,8 +225,10 @@
     .container .inner-container {
       h1 {
         @include header-underline.header-underline(gold);
-        font: 700 1.125em/1.4 variables.$font-family;
-        margin: 0 0 15px;
+        & {
+          font: 700 1.125em/1.4 variables.$font-family;
+          margin: 0 0 15px;
+        }
 
         &::after {
           height: 4px;
