--- a/_scss/layout/_grid.scss
+++ b/_scss/layout/_grid.scss
@@ -11,8 +11,10 @@
 
 .container {
   @include grid-system.container-fixed();
-  margin: 50px auto;
-  overflow: hidden;
+  & {
+    margin: 50px auto;
+    overflow: hidden;
+  }
   
   .inner-container {
     overflow: hidden;
