--- a/_includes/elements/footer.html
+++ b/_includes/elements/footer.html
@@ -24,7 +24,7 @@
             <li><a href="/contact">Contact Us</a></li>
             <li><a href="/privacy">Privacy</a></li>
             <li><a href="/terms">Terms Of Use</a></li>
-            <li><a href="http://dodcio.defense.gov/DoDSection508/Std_Stmt.aspx">Accessibility/Section 508</a></li>
+            <li><a href="https://dodcio.defense.gov/DoDSection508/Std_Stmt.aspx">Accessibility</a></li>
             <li><a href="https://www.rmda.army.mil/foia/RMDA-FOIA-Division.html">FOIA</a></li>
             <li><a href="https://www.army.mil/nofearact">No FEAR Act</a></li>
         </ul>
