remove all javascript:void href links and add preventDefault for # links

--- a/_includes/elements/playlist.html
+++ b/_includes/elements/playlist.html
@@ -9,11 +9,11 @@
         <div class="playlist-panel">
             <div class="playlist-overlay"></div>
             <div class="playlist-toggle">
-                <a href="javascript:;" title="show videos playlist"><span></span></a>
+                <a href="#" title="show videos playlist"><span></span></a>
             </div>
             <div class="playlist-info">
                 <div class="table">
-                    <h5><a href="javascript:;" title="hide videos playlist">Video Playlist Title<span></span></a></h5>
+                    <h5><a href="#" title="hide videos playlist">Video Playlist Title<span></span></a></h5>
                 </div>
             </div>
             <div class="videos">
