--- a/_includes/elements/dropdown-nav.html
+++ b/_includes/elements/dropdown-nav.html
@@ -1,7 +1,7 @@
 <nav>
     <ul>
         <li>
-            <a class="filter-btn" href="javascript:;">FILTER NEWS<span class="toggle-button"></span></a>
+            <a class="filter-btn" href="#">FILTER NEWS<span class="toggle-button"></span></a>
         </li>
     </ul>
 </nav>
@@ -9,16 +9,16 @@
 <div class="dropdown-nav">
     <div class="container">
         <ul>
-            <li id="dropdown-nav1" class="active"><a href="javascript:;">OPTION 1</a></li>
-            <li id="dropdown-nav2"><a href="javascript:;">OPTION 2</a></li>
-            <li id="dropdown-nav3"><a href="javascript:;">OPTION 3</a></li>
-            <li id="dropdown-nav4"><a href="javascript:;">OPTION 4</a></li>
-            <li id="dropdown-nav5"><a href="javascript:;">OPTION 5</a></li>
-            <li id="dropdown-nav6"><a href="javascript:;">OPTION 6</a></li>
-            <li id="dropdown-nav7"><a href="javascript:;">OPTION 7</a></li>
-            <li id="dropdown-nav8"><a href="javascript:;">OPTION 8</a></li>
-            <li id="dropdown-nav9"><a href="javascript:;">OPTION 9</a></li>
-            <li id="dropdown-nav10"><a href="javascript:;">OPTION 10</a></li>
+            <li id="dropdown-nav1" class="active"><a href="#">OPTION 1</a></li>
+            <li id="dropdown-nav2"><a href="#">OPTION 2</a></li>
+            <li id="dropdown-nav3"><a href="#">OPTION 3</a></li>
+            <li id="dropdown-nav4"><a href="#">OPTION 4</a></li>
+            <li id="dropdown-nav5"><a href="#">OPTION 5</a></li>
+            <li id="dropdown-nav6"><a href="#">OPTION 6</a></li>
+            <li id="dropdown-nav7"><a href="#">OPTION 7</a></li>
+            <li id="dropdown-nav8"><a href="#">OPTION 8</a></li>
+            <li id="dropdown-nav9"><a href="#">OPTION 9</a></li>
+            <li id="dropdown-nav10"><a href="#">OPTION 10</a></li>
         </ul>
     </div>
 </div>
