pull in latest changes to armyicons font

--- a/_includes/elements/social-media.html
+++ b/_includes/elements/social-media.html
@@ -19,7 +19,8 @@
   <!-- <li class="social-button"><a href="#" title="Official U.S. Army Google Maps"><i class="armyicons-sm_periscope"></i></a></li> -->
   <!-- <li class="social-button"><a href="#" title="Official U.S. Army Blogger"><i class="armyicons-sm_blogger"></i></a></li> -->
   <li class="social-button"><a href="#" title="Official U.S. Army RSS"><i class="armyicons-rss"></i></a></li>
-  <!-- <li class="social-button"><a href="#" title="Official U.S. Army Soundcloud"><i class="armyicons-sm_soundcloud"></i></a></li> -->
+  <li class="social-button"><a href="#" title="Official U.S. Army Soundcloud"><i class="armyicons-sm_soundcloud"></i></a></li>
+  <li class="social-button"><a href="#" title="Official U.S. Threads"><i class="armyicons-sm_threads"></i></a></li>
 </ul>
 <ul class="social">
   <!-- Regular Black Buttons -->
@@ -42,5 +43,6 @@
   <!-- <li class="social-button-black"><a href="#" title="Official U.S. Army Google Maps"><i class="armyicons-sm_periscope"></i></a></li> -->
   <!-- <li class="social-button-black"><a href="#" title="Official U.S. Army Blogger"><i class="armyicons-sm_blogger"></i></a></li> -->
   <li class="social-button-black"><a href="#" title="Official U.S. Army RSS"><i class="armyicons-rss"></i></a></li>
-  <!-- <li class="social-button-black"><a href="#" title="Official U.S. Army Soundcloud"><i class="armyicons-sm_soundcloud"></i></a></li> -->
+  <li class="social-button-black"><a href="#" title="Official U.S. Army Soundcloud"><i class="armyicons-sm_soundcloud"></i></a></li>
+  <li class="social-button-black"><a href="#" title="Official U.S. Threads"><i class="armyicons-sm_threads"></i></a></li>
 </ul>
